# template-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  NOTICE  README.md  TEMPLATE.md  cargo-generate.toml  justfile  release-please-config.json  release-plz.toml  rust-toolchain.toml
.cargo/: config.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  pr-title.yml  release.yml
crates/{{crate_name}}/: Cargo.toml  README.md
crates/{{crate_name}}/src/: lib.rs
tests/: integration.rs
