[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
rust-version = "{{msrv}}"
authors = ["{{author_name}} <{{author_email}}>"]
repository = "{{repository}}"
homepage = "{{homepage}}"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Internal deps — add path-based entries as new members land under crates/*:
# my-crate = { path = "crates/my-crate" }
#
# Cross-repo deps come from the Kellnr `polaris` registry:
# transport_core = { version = "0.2.0", registry = "polaris" }
# Local dev overrides via polaris-trade/.cargo/config.toml `paths = […]`.

# External deps — minimal, opinionated defaults. Add or remove freely.
anyhow = "1.0.103"
thiserror = "2.0.18"
mockall = "0.15"
rstest = "0.26.1"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

# High-performance release profile. See root AGENTS.md#High-Performance Rules.
# Cross-crate inlining + one codegen unit + abort-on-panic. Slower compile,
# faster runtime, smaller binary. Consumers may override in their own workspace.
[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
