[package]
name = "{{crate_name}}"
description = "{{description}}"
version = "0.1.0"
edition = "2024"
rust-version = "{{msrv}}"
authors = ["{{author_name}} <{{author_email}}>"]
repository = "{{repository}}"
homepage = "{{homepage}}"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
thiserror = "2.0.18"
# Opinionated extras — uncomment as needed:
# anyhow = "1.0.103"
# tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
# tracing = "0.1.44"
# serde = { version = "1.0.228", features = ["derive"] }
# serde_json = "1.0.150"
#
# Cross-repo deps come from git tags:
# transport_core = { git = "https://github.com/polaris-trade/transport-core", tag = "transport_core-v0.2.1" }
# Local dev overrides via polaris-trade/.cargo/config.toml `paths = […]`.

[dev-dependencies]
mockall = "0.15"
rstest = "0.26.1"

# High-performance release profile. See root AGENTS.md#High-Performance Rules.
# Cross-crate inlining + one codegen unit + abort-on-panic. Slower compile,
# faster runtime, smaller binary. Consumers may override in their own workspace.
[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
