[package]
name = "{{crate_name}}"
description = "{{description}}"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license = "MIT"
readme = "README.md"

[lib]
path = "src/lib.rs"

[dependencies]
thiserror = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
rstest = { workspace = true }
